Set source/target compatibility to Java 17
Java 17 is required for unpinned versions in the HEC-HMS v4.13 build script. Source compatibility can be migrated once HEC-HMS goes to v4.14.